# tune

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 001_base_tables.py  002_procrastinate.py  003_pgvector.py  004_files_project_id.py  005_projects_dir_path.py  006_threads.py  007_project_narrative_user_profile.py  008_sra_metadata_model.py  009_project_info.py  010_add_language_to_analysis_jobs.py  011_add_memory_tables.py  012_add_project_dir.py  013_sra_metadata_redesign.py  014_metadata_proposals.py  015_analysis_pipeline_v2_jobs.py  016_analysis_pipeline_v2_new_tables.py  017_input_bindings.py  018_skill_templates.py  019_job_pending_request_ids.py  020_artifact_records.py  021_repair_memory.py  022_query_skill_fields.py  023_add_derived_resources.py  024_add_thread_id_to_analysis_jobs.py  025_persist_current_command_for_auth_requests.py  026_persist_pending_clarification_state.py  027_semantic_artifact_matching.py  028_resource_entities.py  029_scan_state_resource_sync_status.py  030_add_execution_plan_fields.py  031_add_last_progress_at_to_analysis_jobs.py  95d786b7e269_add_installed_packages_and_known_paths.py
scripts/: backfill_job_names.py  backfill_job_thread_ids.py  check_task_consistency.py  dev.sh  migrate_workspace_layout.py  service.md  service.sh
tune/: cli.py
tune/api/: app.py  ws.py
tune/core/: config.py  database.py  (+2 more)
(+132 files in other folders)
